Version 2.0.0-rc2 - The Unnamed version.
-------------
2004-04-xx
	
	 Ariel:
		* Implemented completed parts count on file rehash.
		  Prevents your downloads to completely lost on a wrong .part.met write.
		  This is the first step on bittorrent partial downloads import.

	Hetfield:
		* Added new inclusion path if distro in not detected

Version 2.0.0-rc1 - The 'Mules and Rabbits love carrots' version.
-------------
2004-03-26

	Kry:
		* Implemented SecureIdent (SUI) (imported from eMule 0.30x)
		   This mean your credits will be lost on first run 
		   There is no way to avoid that. Sorry :) Same happened with eMule.
		* Send sources request for files added from search page first.
		* Rewrote MuleNoteBook from gtk to a cross-platform implementation.	
		   The code is already used by xMule too, so I guess they liked it.
		* Fixed most of > 2Gb bug, except the dom's contibution you can scrolling down ;)
		* Made the .part.met load/save 100% compatible with eMule.
		* Fixed the Safe_Delete bug. Seems it arised when we made the app too fast ;)
		* Random usable position of the server split.
		* Added bluecow's fix for zlib compressed packets.
		* Even safer .met saving
		* Added preferences checkbox for new style / old style tabs on preferences 
		   (vertical/horizontal)
		* Checked for protocol limits on file size.
		* Now client detail dialog show Secure Ident State 
		  (Not Supported/BadGuy/Not Complete/Verified)
		* Added itoa to the MFC layer
		* Added SetLength to CFile (MFC compat layer)
		* Fixed hangup on message sending.
		* Moved Fast ED2K show to GUI tweaks
		* Slugfiller's Secure Hash (imported from eMule 0.30x)
		* Fixed GetTickCount code returning signed value
		* Fixed GetTickCount code not initializing the vars.
		* Moved the FILE* to CFile for furter compatibility of code.
		* Added the first version run detection
		* Removed some Yield() code that only slowed init.
		* Simplified systray menu by only showing what needed. 